# zendesk-skill

./: .gitignore  CLAUDE.md  LICENSE  README.md  SKILL.md  pyproject.toml
docs/plans/: 2026-02-16-oauth-support-design.md  2026-02-16-oauth-support-plan.md
reference/: search-syntax.md
src/zendesk_skill/: __init__.py  cli.py  client.py  crypto.py  formatting.py  operations.py  queries.py  reporting.py  server.py  storage.py
src/zendesk_skill/auth/: __init__.py  oauth.py  provider.py  scopes.py  server.py  token_auth.py
src/zendesk_skill/scripts/: __init__.py  analyze_support_metrics.py
src/zendesk_skill/utils/: __init__.py  security.py  time.py
tests/: __init__.py  test_auth.py  test_basic.py  test_crypto.py
